[package]
name = "quay"
version = "0.1.0"
authors = ["Alcibiades <alcibiades.eth@protonmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.60"
axum = { version = "0.6.1", features = ["http2"] }
axum-server = "0.4.4"
chrono = "0.4"
# TODO(Config breaks TryFrom between 0.11 -> 0.13, violating semantic versioning)
config = { version = "0.11", default-features = false, features = ["yaml"] }
ethers = "1.0.2"
futures = "0.3.16"
http = "0.2.8"
hyper = "0.14.23"
log = "0.4.17"
serde = { version = "1.0.140", features = ["derive"] }
serde-aux = "3.1.0"
serde_json = "1.0.82"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["steer"] }
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.35"
tracing-bunyan-formatter = "0.3.3"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["registry", "env-filter"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }

# TODO(sqlx breaks connect_timeout on minor version upgrade, violating semantic versioning)
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
actix-rt = "2.7.0"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls", "cookies", "blocking"] }
serde_json = "1.0.82"
