[package]
name = "quay"
version = "0.1.0"
authors = ["Alcibiades <alcibiades.eth@protonmail.com>", "Perpetuum Seven <perpetuum7@proton.me>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-redis-session = { git = "https://github.com/0xAlcibiades/async-redis-session.git", branch = "tokio" }
async-trait = "0.1.59"
axum = { version = "0.6.1", features = ["http2", "query"] }
axum-macros = "0.3.0"
axum-server = "0.4.4"
axum-sessions = "0.4.1"
bb8 = "0.8.0"
chrono = "0.4"
# TODO(Config breaks TryFrom between 0.11 -> 0.13, violating semantic versioning)
config = { version = "0.11", default-features = false, features = ["yaml"] }
ethers = "1.0.2"
futures = "0.3.25"
http = "0.2.8"
hyper = "0.14.23"
log = "0.4.17"
once_cell = "1.16.0"
prometheus = "0.13.3"
prometheus-metric-storage = "0.5.0"
prost = "0.11.3"
# TODO(https://github.com/redis-rs/redis-rs/pull/725)
# We should switch to rustls for a performance benefit when it's ready.
redis = { version = "0.22.1", features = ["tokio-comp", "connection-manager"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.148", features = ["derive"] }
serde-aux = "4.1.2"
serde_json = "1.0.89"
siwe = {version = "0.5.0", features = ["serde"]}
time = "0.3.17"
tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.3"
tower = { version = "0.4.13", features = ["steer"] }
tower-http = { version = "0.3.5", features = ["trace", "cors"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.4"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }
ulid = "1.0.0"
uuid = { version = "1.2.2", features = ["v4", "serde"] }

# TODO(sqlx breaks connect_timeout on minor version upgrade, violating semantic versioning)
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
once_cell = "1.16.0"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls", "cookies", "blocking"] }

[build-dependencies]
tonic-build = "0.8.4"

[[example]]
name = "client"
path = "examples/client/client.rs"
